syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.prism.protos";

package io.iohk.atala.prism.protos;

message Payload {
    string id = 1; // unique uuid identifying the payload
    bytes content = 2; // content of the payload encrypted by the user
    int64 createdAt = 3; // timestamp of when the payload was registered by the vault
}
